Fixed layout shifting when a btn is shown or hidden

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ body {
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(2, 1fr);
 	gap: 1rem;
+	height: 4.47rem;
 }
 
 .control-btns-container.grid-4-items {
